syntax = "proto3";

package protos;


message AuthReq {
    string union_id = 1;
}

message AuthResponse {
    string url = 1;
    string uid = 2;
    string msg = 3;
    int32 code = 4;
}

message FuncReq {
    string union_id = 1;
    string func_name = 2;
}

message FuncResponse {
    bytes content = 1;
}

service AuthServer {
    rpc Auth (AuthReq) returns (AuthResponse);
    rpc Func (FuncReq) returns (FuncResponse);
}

